--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ windows = { version = "0.58.0", features = [
     "Win32_Storage_FileSystem",
     "Win32_System_IO",
 ] }
+moon-win32-utils = { git = "https://github.com/zanpocc/moon-win32-utils.git" }
